--- a/chain of responsibility/TestProject/TestProject.csproj
+++ b/chain of responsibility/TestProject/TestProject.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\chain of responsibility\chain of responsibility.csproj" />
+  </ItemGroup>
+
 </Project>
